kubernetes/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: details
  namespace: istio-system
spec:
  host: details
  trafficPolicy:
    tls:
      mode: DISABLE
